syntax = "proto3";
// protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto.cmd --ts_proto_out=./ --ts_proto_opt=nestJs=true ./proto/auth.proto 
package auth;

service AuthService {
  rpc Login(LoginDto) returns (UserTokenPayload);
  rpc Register(CreateUserDto) returns (UserTokenPayload);
  rpc VerifyToken(JwtToken) returns (UserJwtPayload);
  rpc DecodeToken(JwtToken) returns (UserJwtPayload);
  rpc SignToken(UserJwt) returns (JwtToken);
}

message Empty {}

message JwtToken {
  string token = 1;
}

message LoginDto {
  string email = 1;
  string password = 2;
}

// Returns User information stored inside JWT
message UserJwt {
  string sub = 1;
  string username = 2;
  string email = 3;
}
// Returns User information to generate JWT
message UserOfJwt {
  string sub = 1;
  string username = 2;
  string email = 3;
}

// Returns User and expiring date of the token
message UserJwtPayload {
  UserJwt user = 1;
  int32 exp = 2;
}

// Returns User and generated JWT token
message UserTokenPayload {
  UserJwt user = 1;
  string token = 2;
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
}

message CreateUserDto {
  string email = 1;
  string username = 2;
  string password = 3;
}